Fixing alignment of buttons on pttemplate page

--- a/src/app/pttemplate/pttemplate.component.css
+++ b/src/app/pttemplate/pttemplate.component.css
@@ -361,3 +361,13 @@ button[mat-icon-button] {
   background-color: #2563eb; /* darker blue */
 }
 
+::ng-deep .mat-mdc-form-field-subscript-wrapper {
+  display: none !important;
+}
+
+/* Ensure the flex container is strictly centering items */
+.toolbar-row {
+  display: flex;
+  align-items: center; /* This aligns the vertical centers */
+  gap: 8px;
+}
